--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       src="https://code.jquery.com/jquery-3.4.1.slim.js"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
